--- a/Ol.Data/BeerShelf.Data.csproj
+++ b/Ol.Data/BeerShelf.Data.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{291AB123-8D98-4766-B78A-9348DCFEA3AD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ol.Data</RootNamespace>
+    <RootNamespace>BeerShelf.Data</RootNamespace>
     <AssemblyName>Ol.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -48,22 +48,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BeerShelfUow.cs" />
     <Compile Include="Configurations\BottleConfiguration.cs" />
     <Compile Include="Configurations\UserConfiguration.cs" />
-    <Compile Include="OlDbContext.cs" />
-    <Compile Include="SampleData\OlDbInitializer.cs" />
+    <Compile Include="EFRepository.cs" />
+    <Compile Include="Helpers\RepositoryFactories.cs" />
+    <Compile Include="Helpers\RepositoryProvider.cs" />
+    <Compile Include="BeerShelfDbContext.cs" />
+    <Compile Include="Helpers\IRepositoryProvider.cs" />
+    <Compile Include="SampleData\BeerShelfDbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ol.Models\Ol.Model.csproj">
+    <ProjectReference Include="..\BeerShelf.Data.Contracts\BeerShelf.Data.Contracts.csproj">
+      <Project>{99579044-701a-4c63-b440-1bdbea6d8578}</Project>
+      <Name>BeerShelf.Data.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ol.Models\BeerShelf.Model.csproj">
       <Project>{caa8b18c-b24c-4d4a-bd41-bd73d4477ebc}</Project>
-      <Name>Ol.Model</Name>
+      <Name>BeerShelf.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
